--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-name: Less Or More
-email: luoyan35714@126.com
-author: Freud Kang
+name: 记录之道 
+email: baoshiqi27@163.com
+author: 鲍世琦
 url: http://www.hifreud.com
 resume_site: http://www.hifreud.com/Resume.io/
-github: https://github.com/luoyan35714/
-baseurl: "/LessOrMore"
+github: https://github.com/shiqibao/
+#baseurl: "/LessOrMore"
 description: Actually, less is more!
 meta_description: 康志华;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
